--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alina Marin Cui Resume</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&family=Teachers:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
@@ -12,29 +12,22 @@
 </head>
 
 <body>
-    <div class="scrolling">
-        <div class="text-overlay">Hello World, I'm Alina!</div>
+    <div class="background">
+        <nav>
+            <img src="logo.png" class="logo">
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="project.html">Projects</a></li>
+                <li><a href="games.html">Games</a></li>
+            </ul>
+        </nav>
+        <div class="content">
+            <h1>Hello World<br>I'm Alina</h1>
+            <p>This is a website to get to know a little about Alina</p>
+        </div>
     </div>
-
-    <div class="container">
-        
-        <main class="content">
-            <nav>
-                <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="project.html">Projects</a></li>
-                    <li><a href="games.html">Games</a></li>
-                </ul>
-            </nav>
-        
-
-            </section>
-            <img src="ColourfulBuildings.jpg" alt="Header Image" class="header-image">
-        </main>
-    </div>
-    <footer>
+    <div class="footer">
         <p>&copy;Alina Cui 2024. All rights reserved.</p>
-    </footer>
-    <script src="scripts.js"></script>
+    </div>
 </body>
 </html>
