--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         </nav>
         <div class="content">
             <h1>Hello World<br>I'm Alina</h1>
-            <p>This is a website to get to know a little about Alina</p>
+            <p>Get to know me a little bit :)</p>
         </div>
+        <img src="bunny.png" class="featuring-img">
     </div>
     <div class="footer">
         <p>&copy;Alina Cui 2024. All rights reserved.</p>
