--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </ul>
         </nav>
         <div class="content">
-            <h1>Hello World<br>I'm Alina</h1>
-            <p>Get to know me a little bit :)</p>
+            <h1 class="animation">Hello World<br>I'm Alina</h1>
+            <p class="animation">Get to know me a little bit :)</p>
         </div>
-        <img src="bunny.png" class="featuring-img">
+        <img src="bunny.png" class="featuring-img animation">
     </div>
     <div class="footer">
         <p>&copy;Alina Cui 2024. All rights reserved.</p>
