--- a/about.html
+++ b/about.html
@@ -1,73 +1,60 @@
-<section id="about">
-    <h2>Hello World!</h2>
-    <p>I am a passionate penultimate year student at UNSW, majoring in Data Science and Decision with a focus on Computational Data Science. 
-        My deep investment in data analytics drives me to excel in analytical skills and tools such as Python, SQL, and R. 
-        I am passionate to use these skills to pursue innovative solutions and contribute meaningfully to data science and related fields. 
-    </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="about.css">
+</head>
 
-</section>
-
-<section id = "education">
-    <h2>Education</h2>
-    <div class = "education">
-        <div class ="typed-out">
-            <h1>University of New South Wales (UNSW)</h1>
-            <h1>Bachelor of Data Science and Decision</h1>
-            <h3>Computational Data Science Major</h3>
-        </div>
-    </div>
-
-</section>
-
-<section id="experience">
-    <h2>Experience</h2>
-
-    <div class="job">
-        <div class="typed-out">
-            <h3>Accounting Assistant and Data Admin </h3>
-            <h4>Parras and Associates</h4>
+<body>
+    <div class="background">
+        <nav>
+            <img src="logo.png" class="logo">
             <ul>
-                <li>Data Integration and Automation: Implemented automated solutions for data entry and integration, enhancing productivity and accuracy in client data handling.</li>
-                <li>Proficient in Data Analysis and Management: Leveraged financial software such as MYOB and advanced functionalities of Microsoft Excel for efficient client data management, data analysis, and reporting.</li>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
+        <div class="leftSection"> 
+            <h1>Hello World!</h1>
+            <p>I am a passionate penultimate year student studying Bachelor of Data Science and Decision majoring in computational Data Science at UNSW.</p>
+        </div>
+        <div class="experiences">
+            <ul>
+                <li class="title">Experiences</li>
+                <li class="toggleItem">Marketing Director
+                    <div class="moreInformation">
+                        <h3>UNSW Data Science Society</h3>
+                        <p>Designed innovative marketing campaigns for the Data Science Society to strengthen student engagement.</p>
+                        <p>Developed a range of branded merchandise, enhancing the society’s visibility and sense of identity.</p>
+                        <p>Demonstrated strong problem-solving skills and analytical thinking in managing and interpreting large datasets to support business decisions.</p>
+                    </div>
+                </li>
+                <li class="toggleItem">Accounting Assistant
+                    <div class="moreInformation">
+                        <h3>Parras and Associates</h3>
+                        <p>Data Integration and Automation: Implemented automated solutions for data entry and integration, enhancing productivity and accuracy in client data handling.</p>
+                        <p>Proficient in Data Analysis and Management: Leveraged financial software such as MYOB and advanced functionalities of Microsoft Excel for efficient client data management, data analysis, and reporting.</p>
+                    </div>
+                </li>
+                <li class="toggleItem">Sponsorship Director
+                    <div class="moreInformation">
+                        <h3>Nippon Student Association</h3>
+                        <p>Analysed sponsorship data to identify trends and opportunities, producing comprehensive reports for stakeholders to support decision-making processes.</p>
+                        <p>Leveraged data insights to craft persuasive proposals and negotiate sponsorship deals, resulting in successful partnerships with key industry players.</p>
+                        <p>Developed and executed sponsorship strategies based on data analysis, leading to a 50% increase in sponsor engagement and contributions.</p> 
+                    </div>
+                </li>
+                <li class="toggleItem">Cisco
+                    <div class="moreInformation">
+                        <h3>Job Shadowing</h3>
+                        <p>Analysed sponsorship data to identify trends and opportunities, producing comprehensive reports for stakeholders to support decision-making processes.</p>
+                        <p>Leveraged data insights to craft persuasive proposals and negotiate sponsorship deals, resulting in successful partnerships with key industry players.</p>
+                        <p>Developed and executed sponsorship strategies based on data analysis, leading to a 50% increase in sponsor engagement and contributions.</p> 
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
 
-    <div class="job">
-        <div class="typed-out">
-            <h3>Marketing Director</h3>
-            <h4>UNSW Data Science Society</h4>
-
-            <ul>
-                <li>Designed innovative marketing campaigns for the Data Science Society to strengthen student engagement.</li>
-                <li>Developed a range of branded merchandise, enhancing the society’s visibility and sense of identity.</li>
-                <li>Demonstrated strong problem-solving skills and analytical thinking in managing and interpreting large datasets to support business decisions.</li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="job">
-        <div class="typed-out">
-            <h3>Job Shadowing </h3>
-            <h4>Cisco</h4>
-            <ul>
-                <li>Contributed analytical insights to discussions, influencing data-centric decision-making in marketing.</li>
-                <li>Collaborated on the analysis of market trends and consumer behaviors.</li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="job">
-        <div class="typed-out">
-            <h3>Sponsorship Director</h3>
-            <h4>UNSW Nippon Association Society</h4>
-            <ul>
-                <li>Analysed sponsorship data to identify trends and opportunities, producing comprehensive reports for stakeholders to support decision-making processes.</li>
-                <li>Leveraged data insights to craft persuasive proposals and negotiate sponsorship deals, resulting in successful partnerships with key industry players.</li>
-                <li>Developed and executed sponsorship strategies based on data analysis, leading to a 50% increase in sponsor engagement and contributions.</li>
-            </ul>
-        </div>
-    </div>
-
-    <!-- Add more job sections as needed -->
-</section>
+</body>
+</html>
