--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
         <div class="content">
-            <h1 class="animation">Hello World<br>I'm Alina</h1>
+            <h1 class="animation">Hello World,<br>I'm Alina</h1>
             <p class="animation">Get to know me a little bit :)</p>
         </div>
         <img src="bunny.png" class="featuring-img animation">
