--- a/about.html
+++ b/about.html
@@ -9,14 +9,16 @@
 <body>
     <div class="background">
         <nav>
-            <img src="logo.png" class="logo">
+            <a href="index.html">
+                <img src="logo.png" class="logo" alt="Logo">
+            </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
         <div class="leftSection"> 
-            <h1>Hello World!</h1>
-            <p>I am a passionate penultimate year student studying Bachelor of Data Science and Decision majoring in computational Data Science at UNSW.</p>
+            <h1 class="animation">Hello World!</h1>
+            <p class="animation">I am a passionate penultimate year student studying Bachelor of Data Science and Decision majoring in computational Data Science at UNSW.</p>
         </div>
         <div class="experiences">
             <ul>
