--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="background">
         <nav>
-            <img src="logo.png" class="logo">
+            <a href="index.html">
+                <img src="logo.png" class="logo" alt="Logo">
+            </a>
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="project.html">Projects</a></li>
