--- a/about.html
+++ b/about.html
@@ -57,6 +57,9 @@
             </ul>
         </div>
     </div>
+    <div class="footer">
+        <p>&copy;Alina Cui 2024. All rights reserved.</p>
+    </div>
 
 </body>
 </html>
