--- a/about.html
+++ b/about.html
@@ -56,6 +56,7 @@
                 </li>
             </ul>
         </div>
+        <img src="panda.png" class="featuring-img animation">
     </div>
     <div class="footer">
         <p>&copy;Alina Cui 2024. All rights reserved.</p>
