--- a/games.html
+++ b/games.html
@@ -1,7 +1,32 @@
-<section id = "games">
-    <h2>Games</h2>
-    <p>Check out our Tic Tac Toe game!</p>
-    <!-- connect to an actual URL maybe so I can actually play -->
-    <a href="tictactoe.html">Play Now!</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="games.css">
+</head>
 
-</section>
+
+<body>
+    <div class="background">
+        <nav>
+            <a href="index.html">
+                <img src="logo.png" class="logo" alt="Logo">
+            </a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
+        <div class="title">
+            <h1 class="animation">Games</h1>
+            <p class="animation">Have a try with these games</p>
+        </div>
+        <div class="content">
+        
+            <p>Check out our Tic Tac Toe game!</p>
+            <!-- connect to an actual URL maybe so I can actually play -->
+            <a href="tictactoe.html">Play Now!</a>
+            
+        </div>
+    </div>
+</body>
