--- a/about.html
+++ b/about.html
@@ -14,6 +14,8 @@
             </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="project.html">Projects</a></li>
+                <li><a href="games.html">Games</a></li>
             </ul>
         </nav>
         <div class="leftSection"> 
