--- a/games.html
+++ b/games.html
@@ -15,6 +15,8 @@
             </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="project.html">Projects</a></li>
             </ul>
         </nav>
         <div class="title">
@@ -28,5 +30,6 @@
             <a href="tictactoe.html">Play Now!</a>
             
         </div>
+        <img src="seal.png" class="featuring-img animation">
     </div>
 </body>
