--- a/project.html
+++ b/project.html
@@ -13,6 +13,8 @@
             </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="games.html">Games</a></li>
             </ul>
         </nav>
 
