--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             <ul>
                 <h1>Experiences</h1>
                 <div class="container">
-                <button type="button" class="btn" onclick="openPopup('popup1')">Marketing Director</button>
+                <button type="button" class="btn" onclick="openPopup('popup1')">Accounting Assistant</button>
                 <div class="popup" id="popup1">
                     <h3>Parras and Associates</h3>
                     <p>Data Integration and Automation: Implemented automated solutions for data entry and integration, enhancing productivity and accuracy in client data handling.</p>
@@ -38,7 +38,7 @@
                 </div>
 
                 <!-- Button 2 -->
-                <button type="button" class="btn" onclick="openPopup('popup2')">Accounting Assistant</button>
+                <button type="button" class="btn" onclick="openPopup('popup2')">Marketing Director</button>
                 <div class="popup" id="popup2">
                     <h3>UNSW Data Science Society</h3>
                     <p>Designed innovative marketing campaigns for the Data Science Society to strengthen student engagement.</p>
@@ -60,9 +60,8 @@
                 <button type="button" class="btn" onclick="openPopup('popup4')">Cisco</button>
                 <div class="popup" id="popup4">
                     <h3>Job Shadowing</h3>
-                    <p>Analysed sponsorship data to identify trends and opportunities, producing comprehensive reports for stakeholders to support decision-making processes.</p>
-                    <p>Leveraged data insights to craft persuasive proposals and negotiate sponsorship deals, resulting in successful partnerships with key industry players.</p>
-                    <p>Developed and executed sponsorship strategies based on data analysis, leading to a 50% increase in sponsor engagement and contributions.</p> 
+                    <p>Contributed analytical insights to discussions, influencing data-centric decision-making in marketing.</p>
+                    <p>Collaborated on the analysis of market trends and consumer behaviours.</p>
                     <button type="button" onclick="closePopup('popup4')">Close</button>
                 </div>
                 
