--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="project.html">Projects</a></li>
+                <li><a href="experience.html">Experience</a></li>
                 <li><a href="games.html">Games</a></li>
             </ul>
         </nav>
@@ -29,6 +30,26 @@
             <ul>
                 <h1>Experiences</h1>
                 <div class="container">
+
+                <!-- button data engineering  -->
+                <button type="button" class="btn" onclick="openPopup('popup5')">Data Engineering Intern</button>
+                <div class="popup" id="popup5">
+                    <h3>Data Army</h3>
+                    <p>Data Integration and Automation: Implemented automated solutions for data entry and integration, enhancing productivity and accuracy in client data handling.</p>
+                    <p>Proficient in Data Analysis and Management: Leveraged financial software such as MYOB and advanced functionalities of Microsoft Excel for efficient client data management, data analysis, and reporting.</p>
+                    <button type="button" onclick="closePopup('popup5')">Close</button>
+                </div>
+                <!-- button master data science -->
+                <button type="button" class="btn" onclick="openPopup('popup6')">Master Data Science Intern</button>
+                <div class="popup" id="popup6">
+                    <h3>Campari Group</h3>
+                    <p>Data Integration and Automation: Implemented automated solutions for data entry and integration, enhancing productivity and accuracy in client data handling.</p>
+                    <p>Proficient in Data Analysis and Management: Leveraged financial software such as MYOB and advanced functionalities of Microsoft Excel for efficient client data management, data analysis, and reporting.</p>
+                    <button type="button" onclick="closePopup('popup6')">Close</button>
+                </div>
+
+
+                <!-- button accounting assistant -->
                 <button type="button" class="btn" onclick="openPopup('popup1')">Accounting Assistant</button>
                 <div class="popup" id="popup1">
                     <h3>Parras and Associates</h3>
@@ -37,7 +58,7 @@
                     <button type="button" onclick="closePopup('popup1')">Close</button>
                 </div>
 
-                <!-- Button 2 -->
+                <!-- Button marketing director -->
                 <button type="button" class="btn" onclick="openPopup('popup2')">Marketing Director</button>
                 <div class="popup" id="popup2">
                     <h3>UNSW Data Science Society</h3>
@@ -47,7 +68,7 @@
                     <button type="button" onclick="closePopup('popup2')">Close</button>
                 </div>
 
-                <!-- Button 3 -->
+                <!-- Button sponsorship director -->
                 <button type="button" class="btn" onclick="openPopup('popup3')">Sponsorship Director</button>
                 <div class="popup" id="popup3">
                     <h3>Nippon Student Association</h3>
@@ -64,6 +85,7 @@
                     <p>Collaborated on the analysis of market trends and consumer behaviours.</p>
                     <button type="button" onclick="closePopup('popup4')">Close</button>
                 </div>
+
                 
             </ul>
         </div>
