--- a/games.html
+++ b/games.html
@@ -17,6 +17,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="project.html">Projects</a></li>
+                <li><a href="experience.html">Experience</a></li>
             </ul>
         </nav>
         <div class="title">
@@ -25,7 +26,7 @@
         </div>
         <div class="content">
         
-            <p>Check out our Tic Tac Toe game!</p>
+            <p>Check out my Tic Tac Toe game!</p>
             <!-- connect to an actual URL maybe so I can actually play -->
             <a href="tictactoe.html">Play Now!</a>
             
