--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="project.html">Projects</a></li>
+                <li><a href="experience.html">Experience</a></li>
                 <li><a href="games.html">Games</a></li>
             </ul>
         </nav>
