--- a/project.html
+++ b/project.html
@@ -14,6 +14,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="experience.html">Experience</a></li>
                 <li><a href="games.html">Games</a></li>
             </ul>
         </nav>
