add_games_of_tic_tac_toe

--- a/games.html
+++ b/games.html
@@ -28,7 +28,7 @@
         
             <p>Check out my Tic Tac Toe game!</p>
             <!-- connect to an actual URL maybe so I can actually play -->
-            <a href="tictactoe.html">Play Now!</a>
+            <a href="./games/tictactoe.html">Play Now!</a>
             
         </div>
         <img src="seal.png" class="featuring-img animation">
