added_powerbi_proj

--- a/project.html
+++ b/project.html
@@ -52,6 +52,33 @@
                         </div>
                     </div>
                 </div>
+                <!-- Dashboard using PowerBI -->
+                <div class="container">
+                    <button type="button" class="btn" onclick="openPopup('popup5')">Personal Fitness Dashboard Project</button>
+                    <div class="popup" id="popup5">
+                        <p>For this project I built an interactive Power BI dashboard to track and analyze personal fitness data from a health app, showcasing metrics like steps, calories, and distance for actionable insights.</p>
+                        <!-- <ul class="no-bullets"> -->
+                            <li>Designed and developed a fitness dashboard in Power BI to track personal health metrics, including steps, calories, distance, and active vs. resting periods.</li>
+                            <li>Collected and cleaned raw health data from a mobile health app, ensuring data integrity for visualization.</li>
+                            <li>Transformed and visualized data in Power BI, creating interactive components such as summary cards, pie charts, and line graphs to display yearly and monthly fitness trends.</li>
+                            <li>Leveraged data engineering skills to optimize data processing and presentation, enhancing the clarity and usability of health insights.</li>
+                        <!-- </ul> -->
+                        <p>Overall, this project demonstrated my ability to transform raw data into meaningful insights, leveraging Power BI to create a visually engaging and informative tool for health tracking.</p>
+                        <div class="video-container">
+                            <video controls>
+                                <source src="myAlina Health Dashboard .mp4" type="video/mp4">
+                                <!-- Your browser does not support the video tag. -->
+                            </video>
+                        </div>
+
+                        <div class="download-link">
+                            <a href="myalinahealthapp video.pbix" download>Click here to download myAlina Fitness Dasboard on PowerBI</a>
+                        </div>
+                        <div>
+                            <button type="button" onclick="closePopup('popup5')">close</button>
+                        </div>
+                    </div>
+                </div>
                 <!-- Resume Website Project -->
                 <div class="container">
                     <button type="button" class="btn" onclick="openPopup('popup2')">My Resume Website</button>
