--- a/experience.html
+++ b/experience.html
@@ -35,9 +35,11 @@
                     <div class="popup" id="popup5">
                         <h3>Data Army</h3>
                         <img src="DataArmy.png" class="logo">
-                        <p>Responsible for building <b>cloud solutions</b> within the PropTech cloud, utilising <b>Snowflake, AWS, and Microsoft Azure</b> to deliver optimised client solutions.</p>
-                        <p>Developing and implementing <b>machine learning models to analyse data</b> and create targeted solutions for clients. </p>
-                        <p>Managing <b>data warehouses</b> and ensuring efficient data storage, retrieval, and processing for enhanced business outcomes.</p>
+                        <ul>
+                            <li>Responsible for building <b>cloud solutions</b> within the PropTech cloud, utilising <b>Snowflake, AWS, and Microsoft Azure</b> to deliver optimised client solutions.</li>
+                            <li>Developing and implementing <b>machine learning models to analyse data</b> and create targeted solutions for clients. </li>
+                            <li>Managing <b>data warehouses</b> and ensuring efficient data storage, retrieval, and processing for enhanced business outcomes.</li>                       
+                        </ul>
                         <button type="button" onclick="closePopup('popup5')">Close</button>
                     </div>
                     <!-- button master data science -->
@@ -45,12 +47,14 @@
                     <div class="popup" id="popup6">
                         <h3>Campari Group</h3>
                         <img src="campari-group-logo.png" class="logo">
-                        <p><b>Developed and automated a solution</b> for the APAC team to validate the accuracy of CAMPARI’s database, implementing periodic self-checks to ensure <b>data quality and integrity</b>.</p>
-                        <p><b>Engineered an automation workflow</b> that streamlined data flow between customers and third parties across the APAC region, enhancing <b>transparency</b> and ensuring <b>consistent data governance</b>.</p>
-                        <p><b>Utilised a diverse toolkit</b> including <b>Power Automate, SAP, Excel, Python, and TypeScript</b> to test, optimize, and implement automation processes, while designing a <b>user-friendly interface</b> for seamless access across the organisation.</p>
-                        <p><b>Collaborating with data management</b> to handle and optimise data using <b>SAP</b>, ensuring alignment of data warehouses and metrics across branches in the <b>US, Italy, Japan, China, and Singapore</b>.</p>
-                        <p><b>Managing data pipeline</b> and maintaining accurate data for <b>efficient operations</b> and <b>international consistency</b>.</p>
-                        <button type="button" onclick="closePopup('popup6')">Close</button>
+                        <ul>
+                            <li><b>Developed and automated a solution</b> for the APAC team to validate the accuracy of CAMPARI’s database, implementing periodic self-checks to ensure <b>data quality and integrity</b>.</li>
+                            <li><b>Engineered an automation workflow</b> that streamlined data flow between customers and third parties across the APAC region, enhancing <b>transparency</b> and ensuring <b>consistent data governance</b>.</li>
+                            <li><b>Utilised a diverse toolkit</b> including <b>Power Automate, SAP, Excel, Python, and TypeScript</b> to test, optimize, and implement automation processes, while designing a <b>user-friendly interface</b> for seamless access across the organisation.</li>
+                            <li><b>Collaborating with data management</b> to handle and optimise data using <b>SAP</b>, ensuring alignment of data warehouses and metrics across branches in the <b>US, Italy, Japan, China, and Singapore</b>.</li>
+                            <li><b>Managing data pipeline</b> and maintaining accurate data for <b>efficient operations</b> and <b>international consistency</b>.</li>
+                        </ul>
+                         <button type="button" onclick="closePopup('popup6')">Close</button>
                     </div>
 
 
@@ -58,8 +62,10 @@
                     <button type="button" class="btn" onclick="openPopup('popup1')">Accounting Assistant</button>
                     <div class="popup" id="popup1">
                         <h3>Parras and Associates</h3>
-                        <p>Data Integration and Automation: Implemented <b>automated solutions for data entry and integration</b>, enhancing productivity and accuracy in client data handling.</p>
-                        <p>Proficient in Data Analysis and Management: Leveraged financial software such as <b>MYOB and advanced functionalities of Microsoft Excel</b> for efficient client data management, data analysis, and reporting.</p>
+                        <ul>
+                            <li>Data Integration and Automation: Implemented <b>automated solutions for data entry and integration</b>, enhancing productivity and accuracy in client data handling.</li>
+                            <li>Proficient in Data Analysis and Management: Leveraged financial software such as <b>MYOB and advanced functionalities of Microsoft Excel</b> for efficient client data management, data analysis, and reporting.</li>
+                        </ul>
                         <button type="button" onclick="closePopup('popup1')">Close</button>
                     </div>
 
@@ -68,8 +74,10 @@
                     <div class="popup" id="popup4">
                         <h3>Job Shadowing</h3>
                         <img src="cisco.png" class="logo">
-                        <p>Contributed analytical insights to discussions, influencing data-centric decision-making in marketing.</p>
-                        <p>Collaborated on the analysis of market trends and consumer behaviours.</p>
+                        <ul>
+                            <li>Contributed analytical insights to discussions, influencing data-centric decision-making in marketing.</li>
+                            <li>Collaborated on the analysis of market trends and consumer behaviours.</li>
+                        </ul>
                         <button type="button" onclick="closePopup('popup4')">Close</button>
                     </div>
                 </div>
