made a new game

--- a/games/RockPaperScissors.html
+++ b/games/RockPaperScissors.html
@@ -27,8 +27,9 @@
             <div class="popup" id="popup">
                 <div>
                     <div class="main">
-                        <h3>Kitten Doggy and Chicks</h3>
+                        <h3>Kitten Doggy 'n Chicks</h3>
                         <!-- choose a character Kitten doggy or chicken -->
+                        <p>Choose your character</p>
                         <button type="button" class="character-btn" onclick="chooseCharacter('Doggy')">
                             <img src="1.png" class="featuring-img animation" alt="Doggy">
                         </button>
@@ -39,6 +40,8 @@
                             <img src="3.png" class="featuring-img animation" alt="Kitten">
                         </button>
                     </div>
+                    <div id="result-display"></div>
+
                     <button type="button" onclick="closePopup('popup')">End</button>
                 </div>
             </div>
